--- a/Simple Tic-Tac-Toe (Python)/The user is the gamemaster/task-info.yaml
+++ b/Simple Tic-Tac-Toe (Python)/The user is the gamemaster/task-info.yaml
@@ -198,9 +198,9 @@ files:
 
     if __name__ == '__main__':    TicTacToeTest().run_tests()
   learner_created: false
-feedback_link: https://hyperskill.org/projects/73/stages/400/implement#comment
+feedback_link: https://hyperskill.org/learn/step/6504#comment
 status: Solved
 feedback:
   message: Congratulations!
   time: "Sat, 12 Aug 2023 05:15:34 UTC"
-record: -1
+record: 2
