--- a/Simple Tic-Tac-Toe (Python)/What's up on the field/task-info.yaml
+++ b/Simple Tic-Tac-Toe (Python)/What's up on the field/task-info.yaml
@@ -239,6 +239,9 @@ files:
 
     if __name__ == '__main__':    TicTacToeTest().run_tests()
   learner_created: false
-feedback_link: https://hyperskill.org/projects/73/stages/401/implement#comment
-status: Unchecked
+feedback_link: https://hyperskill.org/learn/step/6505#comment
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Sun, 13 Aug 2023 16:32:28 UTC"
 record: -1
