--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -4,7 +4,7 @@ hyperskill_project:
   is_template_based: false
   use_ide: true
   environment: unittest
-update_date: "Thu, 01 Jan 1970 00:00:00 UTC"
+update_date: "Sun, 13 Aug 2023 16:15:39 UTC"
 stages:
 - id: 399
   step: 6503
@@ -14,7 +14,7 @@ stages:
   is_completed: true
 - id: 401
   step: 6505
-  is_completed: false
+  is_completed: true
 - id: 402
   step: 6506
   is_completed: false
@@ -104,14 +104,14 @@ topics:
     theory_id: 6322
   - title: Quotes and multi-line strings
     theory_id: 5814
-  - title: Escape sequences
-    theory_id: 7130
   - title: Basic string methods
     theory_id: 6842
-  - title: Split and join
-    theory_id: 6972
   - title: Type casting
     theory_id: 6224
+  - title: Escape sequences
+    theory_id: 7130
+  - title: Split and join
+    theory_id: 6972
   4:
   - title: Loop control statements
     theory_id: 6302
